@@ -254,6 +254,37 @@ fi
 AC_SUBST([SNDFILE_CFLAGS])
 AC_SUBST([SNDFILE_LIBS])
 
+###########################
+# OSS
+###########################
+AC_ARG_ENABLE([oss],
+              AC_HELP_STRING([--disable-oss], [disable support for OSS @<:@autodetect@:>@]),
+              [case "${enableval}" in
+                yes|no) ac_cv_want_oss="${enableval}" ;;
+                *)      AC_MSG_ERROR([bad value "${enableval}" for --disable-oss]) ;;
+               esac],
+               [ac_cv_want_oss=check])
+ac_cv_oss=no
+if test "x$ac_cv_want_oss" = "xno"; then
+    AC_DEFINE(USE_OSS, 0, [Defined if we are using OSS])
+else
+    AC_CHECK_HEADER( [sys/soundcard.h], [ac_cv_oss=yes],
+                     [AC_CHECK_HEADER([machine/soundcard.h], [ac_cv_oss=yes], [])] )
+    if test "x$ac_cv_want_oss" = "xcheck"; then
+        if test "x$ac_cv_oss" = "xyes"; then
+            AC_DEFINE(USE_OSS, 1, [Defined if we are using OSS])
+        else
+            AC_MSG_NOTICE([disabling OSS driver])
+            AC_DEFINE(USE_OSS, 0, [Defined if we are using OSS])
+        fi
+    else # $ac_cv_want_oss is yes
+        if test "x$ac_cv_oss" = "xno"; then
+            AC_MSG_FAILURE([--enable-oss was given, but test for OSS failed])
+        else
+            AC_DEFINE(USE_OSS, 1, [Defined if we are using OSS])
+        fi
+    fi
+fi
 
 ###########################
 # portaudio
@@ -281,6 +312,9 @@ fi
 AC_SUBST([PORTAUDIO_CFLAGS])
 AC_SUBST([PORTAUDIO_LIBS])
 
+if test "$ac_cv_oss" = "no" && test "$ac_cv_portaudio" = "no"; then
+    AC_MSG_FAILURE([$PACKAGE requires OSS or PortAudio])
+fi
 
 ###########################
 # hamlib
@@ -345,6 +379,7 @@ Configuration summary:
   TLS ................................. $ac_cv_have_tls
 
   sndfile ............................. $ac_cv_sndfile
+  OSS ................................. $ac_cv_oss
   PortAudio ........................... $ac_cv_portaudio
   hamlib .............................. $ac_cv_hamlib
 ])
